welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:8: error: ')' expected but '}' found.
	}
        ^SlugTracking:17: error: Unmatched closing brace '}' ignored here
}
^